--- a/public/index.html
+++ b/public/index.html
@@ -98,9 +98,11 @@
     <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
     <script src="./js/classes/Enemy.js"></script>
     <script src="./js/classes/Player.js"></script>
+    
     <script src="./js/classes/Particle.js"></script>
     <script src="./js/classes/Projectile.js"></script>
-    <script src="./js/frontend.js"></script>
+    <script src="./js/classes/Pillar.js"></script>
+<script src="./js/frontend.js"></script>
     <script src="./js/eventListeners.js"></script>
   </body>
 </html>
